# code-challenge-ide

./: .ctl-runner-pool-warm-stamp  .dockerignore  .env.coolify.example  .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  build.gradle  docker-compose.coolify.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.runners.yml  docker-compose.yml  lint-staged.config.mjs  package-lock.json  package.json  settings.gradle  skills-lock.json
.github/workflows/: build.yml  (+1 more)
be/: ARCHITECTURE.md  Dockerfile  build.gradle  docker-entrypoint.sh
config/: quality-gates.properties
docs/: README.md  adding-challenges.md  challenge-catalog-backlog.md  challenge-catalog-sources.md  code_training_lab_mvp_specification.md  contracts.md  coolify.md  frontend.md  multi-tenant-assessment-plan.md  runner-ops.md  technical-article.md  user-guide.md
fe/: Caddyfile  Dockerfile  build.gradle  eslint.config.js  index.html  nginx.conf  nginx.coolify.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
runners/: test_js_runner_parsing.py
runners/cpp/: CMakeLists.txt  Dockerfile  run.py
scripts/: bench-java-runner.py  build-lsp-images.sh  build-lsp-java.sh  build-runner-images.sh  build-runner-java.sh  compose-runners.sh  compose-up.sh  coolify-post-deploy.sh  docker_image_utils.py  fix-backend-packages.sh  fix-be-packages.sh  install-cursor-vendors.sh  lsp_warm.py  pull-runner-images.sh  refactor-backend-packages.sh  runner_pool_warm.py  smoke-runners.sh  tag-runner-images-local.sh  test-warm-all.sh  use-java-26.sh  warm-lsp-images.sh
(+1984 files in other folders)
